tests/snapshots/fmt__fmt__bom.snap
---
source: tests/fmt.rs
expression: visible(&output)
---
@misc{bom,
  title = {A file with a byte-order mark}
}
