tests/snapshots/fmt__fmt__duplicate_fields.snap
---
source: tests/fmt.rs
expression: visible(&output)
---
@article{dup,
  title  = {First title},
  author = {Someone},
  title  = {Second title},
  year   = {2000},
  year   = {2001}
}
