tests/snapshots/fmt__fmt__empty_entry.snap
---
source: tests/fmt.rs
expression: visible(&output)
---
@misc{,
  title = {Entry with an empty key}
}

@misc{
}

@misc{k
}

@misc{k2
}
