tests/snapshots/fmt__fmt__messy_wrap80_sort_fields.snap
---
source: tests/fmt.rs
expression: visible(&output)
---
% A comment line (not really a comment in BibTeX, but common)
@preamble{"\newcommand{\noopsort}[1]{}"}

@string{jmlr = {Journal of Machine Learning Research}}

@article{feifei2006,
  author  = {Fei-Fei, Li and Fergus, Rob and Perona, Pietro},
  title   = {One-shot learning of object categories},
  journal = {IEEE transactions on pattern analysis and machine intelligence},
  year    = {2006},
  volume  = {28},
  number  = {4},
  pages   = {594--611}
}

@article{geron2022,
  author    = {G{\'e}ron, Aur{\'e}lien},
  title     = {Hands-on machine learning with Scikit-Learn, Keras, and
               TensorFlow},
  year      = {2022},
  publisher = {O'Reilly Media, Inc.}
}

@article{klambauer_self,
  author   = {Klambauer, G{\"u}nter and Unterthiner, Thomas and Mayr, Andreas
              and Hochreiter, Sepp},
  title    = {Self-normalizing neural networks},
  journal  = {Advances in neural information processing systems},
  year     = {2017},
  volume   = {30},
  abstract = {Deep Learning has revolutionized vision via convolutional neural
              networks (CNNs) and natural language processing via recurrent
              neural networks (RNNs). However, success stories of Deep Learning
              with standard feed-forward neural networks (FNNs) are rare.}
}

@inproceedings{maaten2008,
  author  = {van der Maaten, Laurens and Hinton, Geoffrey},
  title   = {Visualizing data using {t-SNE}},
  journal = jmlr,
  year    = {2008},
  volume  = {9},
  number  = {11},
  pages   = {2579--2605}
}

@misc{OpenAI2023,
  author        = {{OpenAI}},
  title         = {{GPT-4} Technical Report},
  year          = {2023},
  eprint        = {2303.08774},
  archiveprefix = {arXiv},
  crossref      = {klambauer_self}
}

@article{pascanu2013,
  author    = {Razvan Pascanu and Tomas Mikolov and Yoshua Bengio},
  title     = {On the difficulty of training recurrent neural networks},
  booktitle = {International conference on machine learning},
  year      = {2013},
  pages     = {1310--1318}
}

@article{ronneberger2015,
  author    = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
  title     = {U-Net: Convolutional networks for biomedical image segmentation},
  booktitle = {MICCAI},
  year      = {2015}
}

@book{scholkopf2002,
  author    = {Sch{\"o}lkopf, Bernhard and Smola, Alexander J.},
  title     = {Learning with kernels: support vector machines, regularization,
               optimization, and beyond},
  year      = 2002,
  month     = jan,
  publisher = {MIT press},
  note      = {First } # {edition}
}

@comment{This is a comment entry}
@article{Vaswani2017-xy,
  author  = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit,
             Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and
             Polosukhin, Illia},
  title   = {Attention is all you need},
  journal = {Advances in neural information processing systems},
  year    = {2017},
  volume  = {30}
}

@article{wu2015,
  author    = {Wu, Zhirong and Song, Shuran and Khosla, Aditya and Yu, Fisher
               and Zhang, Linguang and Tang, Xiaoou and Xiao, Jianxiong},
  title     = {{3D} {ShapeNets}: A deep representation for volumetric shapes},
  booktitle = {Proceedings of the IEEE conference on computer vision and pattern
               recognition},
  year      = {2015},
  pages     = {1912--1920}
}
