tests/snapshots/fmt__fmt__no_year.snap
---
source: tests/fmt.rs
expression: visible(&output)
---
@misc{dateonly,
  author = {Doe, John},
  title  = {Dated work},
  date   = {2021-03-04}
}

@misc{noyear,
  author = {Doe, Jane},
  title  = {Undated work}
}
